syntax = "proto3";

package boltz_mock.v1;

service Service {
  // ark --> ln
  rpc SubmarineSwap(SubmarineSwapRequest) returns (SubmarineSwapResponse) {};
  // ln --> ark
  rpc ReverseSubmarineSwap(ReverseSubmarineSwapRequest) returns (ReverseSubmarineSwapResponse) {};
}

message SubmarineSwapRequest {
  string from = 1;
  string to = 2;
  string invoice = 3;
  string preimage_hash = 4;
  string refund_public_key = 5; // not needed ?
  uint64 invoice_amount = 6; // not needed ?
}

message SubmarineSwapResponse {
  string address = 1;
  TaprootTree swap_tree = 2;
  string claim_public_key = 3; 
  uint64 expected_amount = 4;
  bool accept_zero_conf = 5;
}

message ReverseSubmarineSwapRequest {
  string from = 1;
  string to = 2;
  uint64 invoice_amount = 3;
  uint64 onchain_amount = 4;
  string pubkey = 5;
  string descriptor = 6;
}

message ReverseSubmarineSwapResponse {
  string invoice = 1;
  string lockup_address = 2;
  string refund_public_key = 3;
  string preimage_hash = 4;
}

message TaprootTree {
  TaprootLeaf claim_leaf = 1;
  TaprootLeaf refund_leaf = 2;
  TaprootLeaf refund_without_boltz_leaf = 3;
  TaprootLeaf unilateral_claim_leaf = 4;
  TaprootLeaf unilateral_refund_leaf = 5;
  TaprootLeaf unilateral_refund_without_boltz_leaf = 6;
}

message TaprootLeaf {
  int32 version = 1;
  string output = 2;
}
