syntax = "proto3";

package fulmine.v1;

import "fulmine/v1/types.proto";
import "google/api/annotations.proto";

service Service {
  // GetAddress returns offchain address
  rpc GetAddress(GetAddressRequest) returns (GetAddressResponse) {
    option (google.api.http) = {
      get: "/v1/address"
    };
  };
  // GetBalance returns ark balance
  rpc GetBalance(GetBalanceRequest) returns (GetBalanceResponse) {
    option (google.api.http) = {
      get: "/v1/balance"
    };
  };
  // GetInfo returns info about the ark account
  rpc GetInfo(GetInfoRequest) returns (GetInfoResponse) {
    option (google.api.http) = {
      get: "/v1/info"
    };
  };
  // GetOnboardAddress returns onchain address and invoice for requested amount
  rpc GetOnboardAddress(GetOnboardAddressRequest) returns (GetOnboardAddressResponse) {
    option (google.api.http) = {
      post: "/v1/onboard"
      body: "*"
    };
  };
  // Returns round info for optional round_id (no round_id returns current round info)
  rpc GetRoundInfo(GetRoundInfoRequest) returns (GetRoundInfoResponse) {
    option (google.api.http) = {
      get: "/v1/round/{round_id}"
    };
  };
  // GetTransactionHistory returns virtual transactions history
  rpc GetTransactionHistory(GetTransactionHistoryRequest) returns (GetTransactionHistoryResponse) {
    option (google.api.http) = {
      get: "/v1/transactions"
    };
  };
  // Redeems an ark note by joining a round
  rpc RedeemNote(RedeemNoteRequest) returns (RedeemNoteResponse) {
    option (google.api.http) = {
      post: "/v1/note/redeem"
      body: "*"
    };
  };
  // Settle vtxos and boarding utxos
  rpc Settle(SettleRequest) returns (SettleResponse) {
    option (google.api.http) = {
      get: "/v1/settle"
    };
  };
  // Send asks to send amount to ark address by joining a round
  rpc SendOffChain(SendOffChainRequest) returns (SendOffChainResponse) {
    option (google.api.http) = {
      post: "/v1/send/offchain"
      body: "*"
    };
  };
  // SendOnChain asks to send requested amount to requested onchain address
  rpc SendOnChain(SendOnChainRequest) returns (SendOnChainResponse) {
    option (google.api.http) = {
      post: "/v1/send/onchain"
      body: "*"
    };
  };
  rpc SignTransaction(SignTransactionRequest) returns (SignTransactionResponse) {
    option (google.api.http) = {
      post: "/v1/transaction/sign"
      body: "*"
    };
  }
  // CreateVHTLCAddress computes a VHTLC address
  rpc CreateVHTLC(CreateVHTLCRequest) returns (CreateVHTLCResponse) {
    option (google.api.http) = {
      post: "/v1/vhtlc"
      body: "*"
    };
  };
  // ClaimVHTLC = self send vHTLC -> VTXO
  rpc ClaimVHTLC(ClaimVHTLCRequest) returns (ClaimVHTLCResponse) {
    option (google.api.http) = {
      post: "/v1/vhtlc/claim"
      body: "*"
    };
  };
  rpc RefundVHTLCWithoutReceiver(RefundVHTLCWithoutReceiverRequest) returns (RefundVHTLCWithoutReceiverResponse) {
    option (google.api.http) = {
      post: "/v1/vhtlc/refundWithoutReceiver"
      body: "*"
    };
  }
  rpc SettleVHTLC(SettleVHTLCRequest) returns (SettleVHTLCResponse) {
    option (google.api.http) = {
      post: "/v1/vhtlc/settle"
      body: "*"
    };
  }
  // ListVHTLC = list all vhtlc OR filter by vhtlc_id
  rpc ListVHTLC(ListVHTLCRequest) returns (ListVHTLCResponse) {
    option (google.api.http) = {
      get: "/v1/vhtlc"
    };
  };
  rpc GetInvoice(GetInvoiceRequest) returns (GetInvoiceResponse) {
    option (google.api.http) = {
      post: "/v1/invoice"
      body: "*"
    };
  }
  rpc PayInvoice(PayInvoiceRequest) returns (PayInvoiceResponse) {
    option (google.api.http) = {
      post: "/v1/invoice/pay"
      body: "*"
    };
  }
  rpc IsInvoiceSettled(IsInvoiceSettledRequest) returns (IsInvoiceSettledResponse) {
    option (google.api.http) = {
      get: "/v1/invoice/status"
    };
  }
  // GetDelegatePublicKey retrieves the Fulmine's public key to be included in VTXO scripts.
  rpc GetDelegatePublicKey(GetDelegatePublicKeyRequest) returns (GetDelegatePublicKeyResponse) {
    option (google.api.http) = {
      get: "/v1/delegate/pubkey"
    };
  }
  // WatchAddressForRollover watches an address for rollover
  rpc WatchAddressForRollover(WatchAddressForRolloverRequest) returns (WatchAddressForRolloverResponse) {
    option (google.api.http) = {
      post: "/v1/delegate/watch"
      body: "*"
    };
  };
  // UnwatchAddress unsubscribes an address from vtxo rollover
  rpc UnwatchAddress(UnwatchAddressRequest) returns (UnwatchAddressResponse) {
    option (google.api.http) = {
      post: "/v1/delegate/unwatch"
      body: "*"
    };
  };
  // ListWatchedAddresses lists all watched addresses
  rpc ListWatchedAddresses(ListWatchedAddressesRequest) returns (ListWatchedAddressesResponse) {
    option (google.api.http) = {
      get: "/v1/delegate/watched"
    };
  };
  // GetVirtualTxs returns the virtual transactions in hex format for the specified txids.
  rpc GetVirtualTxs(GetVirtualTxsRequest) returns (GetVirtualTxsResponse) {
    option (google.api.http) = {
      get: "/v1/virtualTx/{txids}"
    };
  };
  // GetVtxos returns VTXOs filtered by the specified filter type.
  // If no filter is provided, returns all VTXOs.
  rpc GetVtxos(GetVtxosRequest) returns (GetVtxosResponse) {
    option (google.api.http) = {
      get: "/v1/vtxos"
    };
  }
  // NextSettlement returns the next scheduled settlement time
  rpc NextSettlement(NextSettlementRequest) returns (NextSettlementResponse) {
    option (google.api.http) = {
      get: "/v1/settlement/next"
    };
  };
  // CreateChainSwap initiates a chain swap between Ark and Bitcoin
  rpc CreateChainSwap(CreateChainSwapRequest) returns (CreateChainSwapResponse) {
    option (google.api.http) = {
      post: "/v1/chainswap"
      body: "*"
    };
  };
  // ListChainSwaps retrieves all chain swaps
  rpc ListChainSwaps(ListChainSwapsRequest) returns (ListChainSwapsResponse) {
    option (google.api.http) = {
      get: "/v1/chainswaps"
    };
  };
  // RefundChainSwap initiates a cooperative refund for a chain swap
  rpc RefundChainSwap(RefundChainSwapRequest) returns (RefundChainSwapResponse) {
    option (google.api.http) = {
      post: "/v1/chainswap/{id}/refund"
      body: "*"
    };
  };
}

message GetAddressRequest {}
message GetAddressResponse {
  string address = 1;
  string pubkey = 2;
}

message GetBalanceRequest {}
message GetBalanceResponse {
  uint64 amount = 1;
}

message GetInfoRequest {}
message GetInfoResponse {
  enum Network {
    NETWORK_UNSPECIFIED = 0;
    NETWORK_MAINNET = 1;
    NETWORK_TESTNET = 2;
    NETWORK_REGTEST = 3;
  }
  // The bitcoin network on which Fulmine is running.
  Network network = 1;
  // The ark address prefix (ark | tark).
  string addr_prefix = 2;
  // The URL of the server to which Fulmine is connected to if already initialized.
  string server_url = 3;
  // info about the current version of the ark wallet.
  BuildInfo build_info = 4;
  // The Fulmine's public key used in VTXO scripts.
  string pubkey = 5;
  // The signer's public key used in VTXO scripts.
  string signer_pubkey = 6;
}

message GetOnboardAddressRequest {
  uint64 amount = 1;
}
message GetOnboardAddressResponse {
  string address = 1;
}

message GetRoundInfoRequest {
  string round_id = 1;
}
message GetRoundInfoResponse {
  Round round = 1;
}

message GetTransactionHistoryRequest {}
message GetTransactionHistoryResponse {
  repeated TransactionInfo transactions = 1;
}

message RedeemNoteRequest {
  string note = 1;
}
message RedeemNoteResponse {
  string txid = 1;
}

message SettleRequest {}
message SettleResponse {
  string txid = 1;
}

message SendOffChainRequest {
  string address = 1;
  uint64 amount = 2;
}
message SendOffChainResponse {
  string txid = 1;
}

message SendOnChainRequest {
  string address = 1;
  uint64 amount = 2;
}
message SendOnChainResponse {
  string txid = 1;
}

message SignTransactionRequest {
  string tx = 1;
}
message SignTransactionResponse {
  string signed_tx = 1;
}

message CreateVHTLCRequest {
  string preimage_hash = 1;
  string sender_pubkey = 2; 
  string receiver_pubkey = 3; 
  // Optional absolute locktime for refund condition (in blocks)
  uint32 refund_locktime = 4;
  // Optional unilateral claim delay (relative timelock)
  RelativeLocktime unilateral_claim_delay = 5;
  // Optional unilateral refund delay (relative timelock)
  RelativeLocktime unilateral_refund_delay = 6;
  // Optional unilateral refund without receiver delay (relative timelock)
  RelativeLocktime unilateral_refund_without_receiver_delay = 7;
}
message CreateVHTLCResponse {
  string id = 1;
  string address = 2;
  string claim_pubkey = 3;
  string refund_pubkey = 4;
  string server_pubkey = 5;
  TaprootTree swap_tree = 6;
  int64 refund_locktime = 7;
  int64 unilateral_claim_delay = 8;
  int64 unilateral_refund_delay = 9;
  int64 unilateral_refund_without_receiver_delay = 10;
}

message ClaimVHTLCRequest {
  string vhtlc_id = 1;
  string preimage = 2;
}
message ClaimVHTLCResponse {
  string redeem_txid = 1;
}

message RefundVHTLCWithoutReceiverRequest {
  string vhtlc_id = 1;
}
message RefundVHTLCWithoutReceiverResponse {
  string redeem_txid = 1;
}

message SettleVHTLCRequest {
  string vhtlc_id = 1;
  oneof settlement_type {
    ClaimPath claim = 2;
    RefundPath refund = 3;
  }
}

message ClaimPath {
  string preimage = 1;
}

message RefundPath {
  DelegateRefundParams delegate_params = 1;
}

message DelegateRefundParams {
  string signed_intent_proof = 1;
  string intent_message = 2;
  string partial_forfeit_tx = 3;
}

message SettleVHTLCResponse {
  string txid = 1;
}

message ListVHTLCRequest {
  string vhtlc_id = 1;
}
message ListVHTLCResponse {
  repeated Vtxo vhtlcs = 1;
}

message GetInvoiceRequest {
  uint64 amount = 1;
}
message GetInvoiceResponse {
  string invoice = 1;
}

message PayInvoiceRequest {
  string invoice = 1;
}
message PayInvoiceResponse {
  string txid = 1;
}

message TaprootTree {
  TaprootLeaf claim_leaf = 1;
  TaprootLeaf refund_leaf = 2;
  TaprootLeaf refund_without_boltz_leaf = 3;
  TaprootLeaf unilateral_claim_leaf = 4;
  TaprootLeaf unilateral_refund_leaf = 5;
  TaprootLeaf unilateral_refund_without_boltz_leaf = 6;
}

message TaprootLeaf {
  int32 version = 1;
  string output = 2;
}

message IsInvoiceSettledRequest {
  string invoice = 1;
}

message IsInvoiceSettledResponse {
  bool settled = 1;
}

// RelativeLocktime represents a relative timelock
message RelativeLocktime {
  enum LocktimeType {
    LOCKTIME_TYPE_UNSPECIFIED = 0;
    LOCKTIME_TYPE_BLOCK = 1;
    LOCKTIME_TYPE_SECOND = 2;
  }
  LocktimeType type = 1;
  uint32 value = 2;
}

// Request for getting the delegate public key. No fields required.
message GetDelegatePublicKeyRequest {
  // No fields needed
}

// Response containing the delegate public key.
message GetDelegatePublicKeyResponse {
  // The Fulmine's public key to be used for delegate operations, encoded in hex
  string public_key = 1;
}

message WatchAddressForRolloverRequest {
    RolloverAddress rollover_address = 1;
}

message WatchAddressForRolloverResponse {}

message UnwatchAddressRequest {
  string address = 1; // The address to stop watching
}

message UnwatchAddressResponse {}

message ListWatchedAddressesRequest {
}

message ListWatchedAddressesResponse {
  repeated RolloverAddress addresses = 1; // List of all watched addresses
}

message RolloverAddress {
  string address = 1; // The watched address
  Tapscripts taproot_tree = 2; // Full taproot tree as list of hex tapscripts
  string destination_address = 3; // Where funds will be rolled over to
}

message Tapscripts {
  repeated string scripts = 1;
}

message GetVirtualTxsRequest {
  repeated string txids = 1;
}

message GetVirtualTxsResponse {
  repeated string txs = 1;
}

// GetVtxosRequest allows filtering VTXOs by state using oneof for mutual exclusion.
// If no filter is provided, all VTXOs are returned.
message GetVtxosRequest {
  oneof filter {
    bool spendable_only = 1; // Filter for spendable VTXOs only
    bool spent_only = 2; // Filter for spent VTXOs only
    bool recoverable_only = 3; // Filter for recoverable VTXOs only
  }
}
message GetVtxosResponse {
  repeated Vtxo vtxos = 1; // List of VTXOs matching the filter
}

message NextSettlementRequest {}
message NextSettlementResponse {
  int64 next_settlement_at = 1;
}

// Chain Swap Messages

// SwapDirection specifies the direction of a chain swap
enum SwapDirection {
  SWAP_DIRECTION_UNSPECIFIED = 0;
  SWAP_DIRECTION_ARK_TO_BTC = 1;
  SWAP_DIRECTION_BTC_TO_ARK = 2;
}

message CreateChainSwapRequest {
  SwapDirection direction = 1;  // Direction of the swap
  uint64 amount = 2;                  // Amount in satoshis
  string btc_address = 3;             // For Ark→BTC: destination BTC address (required)
                                       // For BTC→Ark: ignored
}
message CreateChainSwapResponse {
  string id = 1;
  string status = 2;
  string user_lockup_txid = 3;        // For Ark→BTC: VTXO lockup txid
                                       // For BTC→Ark: empty until user sends BTC
  string lockup_address = 4;          // For BTC→Ark: BTC address to send funds to
                                       // For Ark→BTC: empty
  uint64 expected_amount = 5;         // For BTC→Ark: Expected amount including fees
                                       // For Ark→BTC: same as request amount
  uint64 timeout_block_height = 6;    // Timeout block height (BTC→Ark)
  string preimage_hash = 7;           // HTLC preimage hash
  string error = 8;
}

message ChainSwapResponse {
  string id = 1;
  string from = 2;
  string to = 3;
  uint64 amount = 4;
  string status = 5;
  string preimage = 6;
  string user_lockup_txid = 7;
  string server_lockup_txid = 8;
  string claim_txid = 9;
  string refund_txid = 10;
  string btc_address = 11;
  int64 timestamp = 12;
  string error_message = 13;
}

message ListChainSwapsRequest {
  repeated string swap_ids = 1;
}
message ListChainSwapsResponse {
  repeated ChainSwapResponse swaps = 1;
}

message RefundChainSwapRequest {
  string id = 1;
}
message RefundChainSwapResponse {
  string message = 1;
}

